namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-community-rehabilitation-ancilliary-jitbit-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-community-rehabilitation-ancilliary-jitbit-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "probation-webops"
    cloud-platform.justice.gov.uk/application: "hmpps community rehabilitation ancilliary jitbit"
    cloud-platform.justice.gov.uk/owner: "HMPPS Probation Webops: probation-webops@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-cr-ancillary-jitbit-app"
    cloud-platform.justice.gov.uk/team-name: "hmpps-cr-ancillary-jitbit-app-cloud-platform"
    cloud-platform.justice.gov.uk/review-after: "2023-02-10"
